<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/bg_color"
    >

    <ImageView
        android:id="@+id/activity_login_login_icon"
        android:layout_width="234px"
        android:layout_height="234px"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="114px"
        android:src="@mipmap/login_logo"/>

    <FrameLayout
        android:id="@+id/fl_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_login_login_icon"
        android:layout_marginLeft="68px"
        android:layout_marginRight="68px"
        android:layout_marginTop="100px">

        <ImageView
            android:id="@+id/iv_username"
            android:layout_width="52px"
            android:layout_height="52px"
            android:layout_gravity="left"
            android:src="@mipmap/account"/>

        <EditText
            android:id="@+id/mEtPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="left|center"
            android:hint="@string/input_phonenumber"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="76px"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="32px"
            />


    </FrameLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/fl_login_username"
        android:layout_gravity="bottom"
        android:layout_marginLeft="68px"
        android:layout_marginRight="68px"
        android:layout_marginTop="10dp"
        android:background="@color/white_50"/>

    <FrameLayout
        android:id="@+id/fl_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_marginLeft="68px"
        android:layout_marginRight="68px"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="52px"
            android:layout_height="52px"
            android:src="@mipmap/password"/>

        <Button
            android:id="@+id/mBtnShowPassword"
            android:layout_width="40px"
            android:layout_height="40px"
            android:layout_gravity="right"
            android:background="@mipmap/password_hide"
            />


        <EditText
            android:id="@+id/mEtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="76px"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="32px"
            />
    </FrameLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="68px"
        android:layout_marginRight="68px"
        android:layout_below="@+id/fl_login_password"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:background="@color/white_50"/>

    <Button

        android:id="@+id/mBtnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view2"
        android:layout_marginLeft="68px"
        android:layout_marginRight="68px"
        android:layout_marginTop="74px"
        android:background="@drawable/btn_login"
        android:textSize="32px"
        android:text="@string/login"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/mBtnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mBtnLogin"
        android:layout_marginLeft="68px"
        android:layout_marginRight="68px"
        android:layout_marginTop="62px"
        android:background="@drawable/btn_ontime_register"
        android:textSize="32px"
        android:text="@string/login_activity_sign_in"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tvForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28px"
        android:onClick="forgetPassword"
        android:text="@string/login_activity_forget_password"
        android:textColor="@color/white"
        android:textSize="28px"/>

</RelativeLayout>